--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dev_dependencies:
 dependencies:
   collection: ^1.18.0
   cron: ^0.6.0
+  equatable: ^2.0.5
   intl: ^0.19.0
   nyxx: ^6.2.1
   nyxx_commands: ^6.0.2
