--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cron: ^0.6.0
   dio: ^5.4.3+1
   equatable: ^2.0.5
+  fpdart: ^1.1.0
   intl: ^0.19.0
   nyxx: ^6.2.1
   nyxx_commands: ^6.0.2
