--- a/.github/workflows/deploy-to-cloud-run.yaml
+++ b/.github/workflows/deploy-to-cloud-run.yaml
@@ -62,21 +62,36 @@ jobs:
       - name: Push Docker image to Artifact Registry
         run: docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
 
-      - name: Deploy to Cloud Run
-        id: deploy
-        uses: google-github-actions/deploy-cloudrun@v2 # Use the latest major version
-        with:
-          service: ${{ env.SERVICE_NAME }}
-          region: ${{ env.GAR_LOCATION }}
-          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          # === Set environment variables from Secret Manager ===
-          secrets: |-
-            BOT_TOKEN=${{ env.SECRET_BOT_TOKEN_NAME }}:latest
-            ADMIN_USER_ID=${{ env.SECRET_ADMIN_ID_NAME }}:latest
-            FOOTER_TEXT=${{ env.SECRET_FOOTER_TEXT_NAME }}:latest
-            WAIFU_API_URL=${{ env.SECRET_WAIFU_API_NAME }}:latest
-            GUILD_ID=${{ env.SECRET_GUILD_ID_NAME }}:latest
+      # - name: Deploy to Cloud Run (Using google-github-actions/deploy-cloudrun@v2)
+      #   uses: google-github-actions/deploy-cloudrun@v2 # Use the latest major version
+      #   with:
+      #     service: ${{ env.SERVICE_NAME }}
+      #     region: ${{ env.GAR_LOCATION }}
+      #     image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+      #     secrets: |-
+      #       BOT_TOKEN=${{ env.SECRET_BOT_TOKEN_NAME }}:latest
+      #       ADMIN_USER_ID=${{ env.SECRET_ADMIN_ID_NAME }}:latest
+      #       FOOTER_TEXT=${{ env.SECRET_FOOTER_TEXT_NAME }}:latest
+      #       WAIFU_API_URL=${{ env.SECRET_WAIFU_API_NAME }}:latest
+      #       GUILD_ID=${{ env.SECRET_GUILD_ID_NAME }}:latest
+      #     # The following inputs seem to be problematic with the linter/action version
+      #     # no-allow-unauthenticated: true
+      #     # min-instances: "1"
+      #     # cpu-throttling: false
 
-      - name: Output Cloud Run service URL (if needed)
+      - name: Deploy to Cloud Run (Direct gcloud command)
+        id: deploy_gcloud
         run: |
-          echo "Cloud Run Service URL: ${{ steps.deploy.outputs.url }}"
+          gcloud run deploy ${{ env.SERVICE_NAME }} \
+            --image "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}" \
+            --region ${{ env.GAR_LOCATION }} \
+            --set-secrets=BOT_TOKEN=${{ env.SECRET_BOT_TOKEN_NAME }}:latest,ADMIN_USER_ID=${{ env.SECRET_ADMIN_ID_NAME }}:latest,FOOTER_TEXT=${{ env.SECRET_FOOTER_TEXT_NAME }}:latest,WAIFU_API_URL=${{ env.SECRET_WAIFU_API_NAME }}:latest,GUILD_ID=${{ env.SECRET_GUILD_ID_NAME }}:latest \
+            --cpu-always-allocated \
+            --min-instances=1 \
+            --allow-unauthenticated=false \
+            --quiet \
+            --format="value(status.url)" # To capture the URL
+
+      - name: Output Cloud Run service URL
+        run: |
+          echo "Cloud Run Service URL: ${{ steps.deploy_gcloud.outputs.stdout }}"
