--- a/.github/workflows/deploy-to-cloud-run.yaml
+++ b/.github/workflows/deploy-to-cloud-run.yaml
@@ -69,6 +69,7 @@ jobs:
             --image "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}" \
             --region ${{ env.GAR_LOCATION }} \
             --set-secrets=BOT_TOKEN=${{ env.SECRET_BOT_TOKEN_NAME }}:latest,ADMIN_USER_ID=${{ env.SECRET_ADMIN_ID_NAME }}:latest,FOOTER_TEXT=${{ env.SECRET_FOOTER_TEXT_NAME }}:latest,WAIFU_API_URL=${{ env.SECRET_WAIFU_API_NAME }}:latest,GUILD_ID=${{ env.SECRET_GUILD_ID_NAME }}:latest \
+            --cpu-always-allocated \
             --min-instances=1 \
             --quiet \
             --format="value(status.url)" # To capture the URL
