--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
 
     env_file: .env
     ports:
-      - "8080:8080"
+      # Some random port
+      - "24000:24000"
     restart: unless-stopped
