--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dio: ^5.4.3+1
   equatable: ^2.0.5
   fpdart: ^1.1.0
+  google_generative_ai: ^0.4.7
   intl: ^0.19.0
   nyxx: ^6.2.1
   nyxx_commands: ^6.0.2
