--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,25 @@ services:
       # Some random port
       - "24000:24000"
     restart: unless-stopped
+    depends_on:
+      - lavalink
+    networks:
+      - bot-network
+
+  lavalink:
+    image: fredboat/lavalink:latest
+    container_name: lavalink
+    restart: unless-stopped
+    environment:
+      - _JAVA_OPTIONS=-Xmx512m
+      - SERVER_PORT=2333
+    volumes:
+      - ./lavalink/application.yml:/opt/Lavalink/application.yml
+    ports:
+      - "2333:2333"
+    networks:
+      - bot-network
+
+networks:
+  bot-network:
+    driver: bridge
