--- a/.env.render.example
+++ b/.env.render.example
@@ -14,12 +14,17 @@ RED_DOOR_AI_PERSONA=Your AI persona here
 AI_MODEL=gemini-1.5-flash
 
 # Music Bot - Lavalink Configuration
-# OPTION 1: Hosted Lavalink (Recommended for Render free tier)
+# Using HOSTED Lavalink (Free - Recommended for Render)
 LAVALINK_HOST=lavalink.darrennathanael.com
 LAVALINK_PORT=443
 LAVALINK_PASSWORD=youshallnotpass
 
-# OPTION 2: Self-hosted Lavalink on Render (Requires paid Private Service)
+# Alternative hosted Lavalink servers (if primary is down):
+# LAVALINK_HOST=lavalink-replit.darrennathanael.repl.co
+# LAVALINK_PORT=443
+# LAVALINK_PASSWORD=youshallnotpass
+
+# Self-hosted Lavalink on Render (Requires paid Private Service - $7/month)
 # LAVALINK_HOST=your-lavalink-service-name
 # LAVALINK_PORT=2333
 # LAVALINK_PASSWORD=youshallnotpass
